2008-06-04  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Implemented cmd_sync_remote2local() for restoring
	  backup from S3 to a local filesystem
	* S3/S3.py: S3.object_get_uri() now requires writable stream 
	  and not a path name.
	* S3/Utils.py: Added mkdir_with_parents()

2008-06-04  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Refactored cmd_sync() in preparation 
	  for remote->local sync.

2008-04-30  Michal Ludvig  <michal@logix.cz>

	* s3db, S3/SimpleDB.py: Implemented almost full SimpleDB API.

2008-04-29  Michal Ludvig  <michal@logix.cz>

	* s3db, S3/SimpleDB.py: Initial support for Amazon SimpleDB. 
	  For now implements ListDomains() call and most of the 
	  infrastructure required for request creation.

2008-04-29  Michal Ludvig  <michal@logix.cz>

	* S3/Exceptions.py: Exceptions moved out of S3.S3
	* S3/SortedDict.py: rewritten from scratch to preserve
	  case of keys while still sorting in case-ignore mode.

2008-04-28  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: send_file() now computes MD5 sum of the file
	  being uploaded, compares with ETag returned by Amazon
	  and retries upload if they don't match.

2008-03-05  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Utils.py: Throttle upload speed and retry 
	  when upload failed.
	  Report download/upload speed and time elapsed.

2008-02-28  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.6
	  ----------------------

2008-02-28  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: bumped up version to 0.9.6
	* NEWS: What's new in 0.9.6

2008-02-27  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1: Updated help and man page.
	* S3/S3.py, S3/Utils.py, s3cmd: Support for 's3cmd info' command.
	* s3cmd: Fix crash when 'sync'ing files with unresolvable owner uid/gid.
	* S3/S3.py, S3/Utils.py: open files in binary mode (otherwise windows
	  users have problems).
	* S3/S3.py: modify 'x-amz-date' format (problems reported on MacOS X). 
	  Thanks Jon Larkowski for fix.
